opam-version: "1.2"
version: "0.4.1"
maintainer: "simon.cruanes.2007@m4x.org"
author: "Simon Cruanes"
homepage: "https://github.com/c-cube/smbc"
build: [
    ["jbuilder" "build" "@install"]
]
depends: [
  "jbuilder" { build }
  "base-bytes"
  "containers" { >= "1.0" }
  "sequence" { >= "0.4" }
  "msat" { >= "0.5" & < "0.8" }
  "tip-parser" { >= "0.3" }
  "menhir"
]
available: [
    ocaml-version >= "4.03"
]
tags: [ "logic" "narrowing" "model" "smt" ]
bug-reports: "https://github.com/c-cube/smbc/issues"
dev-repo: "https://github.com/c-cube/smbc.git"


