opam-version: "2.0"
version: "0.6.1"
maintainer: "simon.cruanes.2007@m4x.org"
author: "Simon Cruanes"
homepage: "https://github.com/c-cube/smbc"
synopsis: "Experimental model finder/SMT solver for functional programming"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
]
depends: [
  "dune" { >= "1.0" }
  "base-bytes"
  "containers" { >= "3.0" & < "4.0" }
  "iter" { >= "1.0" }
  "msat" { >= "0.8" & < "0.9" }
  "tip-parser" { >= "0.6" & < "0.7" }
  "ocaml" { >= "4.03" }
]
tags: [ "logic" "narrowing" "model" "smt" ]
bug-reports: "https://github.com/c-cube/smbc/issues"
dev-repo: "git+https://github.com/c-cube/smbc.git"


